Remove: .rubocop_todo.ymlを削除

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,4 +1,4 @@
-inherit_from: .rubocop_todo.yml
+# This file overrides https://github.com/bbatsov/rubocop/blob/master/config/default.yml
 
 AllCops:
   Exclude:
